sbi-manifests/sbi-cms-issuance-program-configuration-extn/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-issuance-program-configuration-extn
  namespace: sbi
  labels:
    app: sbi-cms-issuance-program-configuration-extn
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-issuance-program-configuration-extn
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-issuance-program-configuration-extn
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 8afb2c646bcfe387652ff8dae469ebf5461f97699ff2203402ff2d82fb3d1e33
    spec:
      serviceAccountName: sbi-cms-issuance-program-configuration-extn-sa
      volumes:
      containers:
        - name: sbi-cms-issuance-program-configuration-extn
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-issuance-program-configuration-extn:sbi-uat.v163
          volumeMounts:
          ports:
            - containerPort: 8091
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
